add user secrets configuration

--- a/SearchKernelProject.csproj
+++ b/SearchKernelProject.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>f3f45456-5bfc-4e2e-8f94-26a252a2db4c</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
